# ParallelComputing

./: CMakeLists.txt  README.md
MPI/: Task1_1.cpp  Task1_2.cpp  Task1_3.cpp  Task1_4.cpp  Task1_5.cpp  Task2_1.cpp  Task2_2.cpp  Task2_3.cpp  Task2_4.cpp  Task2_5.cpp  Task3_1.cpp  Task3_2.cpp  Task3_3.cpp  Task3_4.cpp  Task3_5.cpp  Task4_1.cpp  Task4_2.cpp  Task4_3.cpp  Task5_1.cpp  Task5_2.cpp  Task5_3.cpp
OpenMP/: task02.cpp  task03.cpp  task06.cpp  task07.cpp  task1.cpp  task10.cpp  task11.cpp  task13.cpp  task14.cpp  task15.cpp  task4.cpp  task5.cpp  task8.cpp  task9.cpp
