cmake_minimum_required(VERSION 3.23)
project(ParallelComputing)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")

add_executable(OpenMP_Task01 OpenMP/task01.cpp)
add_executable(OpenMP_Task02 OpenMP/task02.cpp)
add_executable(OpenMP_Task03 OpenMP/task03.cpp)
add_executable(OpenMP_Task04 OpenMP/task04.cpp)
add_executable(OpenMP_Task05 OpenMP/task05.cpp)
add_executable(OpenMP_Task06 OpenMP/task06.cpp)
add_executable(OpenMP_Task07 OpenMP/task07.cpp)
add_executable(OpenMP_Task08 OpenMP/task08.cpp)
add_executable(OpenMP_Task09 OpenMP/task09.cpp)
add_executable(OpenMP_Task10 OpenMP/task10.cpp)
add_executable(OpenMP_Task11 OpenMP/task11.cpp)
add_executable(OpenMP_Task13 OpenMP/task13.cpp)
add_executable(OpenMP_Task14 OpenMP/task14.cpp)
add_executable(OpenMP_Task15 OpenMP/task15.cpp)

find_package(MPI REQUIRED)

add_executable(MPI_Task_1_1 MPI/Task1_1.cpp)
target_link_libraries(MPI_Task_1_1 PUBLIC MPI::MPI_CXX)
