cmake_minimum_required(VERSION 3.23)
project(ParallelComputing)

set(CMAKE_CXX_STANDARD 14)
set(OPENMP_COMPILE_FLAG "-fopenmp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENMP_COMPILE_FLAG}")

add_executable(OpenMP_Task01 OpenMP/task01.cpp)
add_executable(OpenMP_Task02 OpenMP/task02.cpp)
add_executable(OpenMP_Task03 OpenMP/task03.cpp)
add_executable(OpenMP_Task04 OpenMP/task04.cpp)
add_executable(OpenMP_Task05 OpenMP/task05.cpp)
add_executable(OpenMP_Task06 OpenMP/task06.cpp)
add_executable(OpenMP_Task07 OpenMP/task07.cpp)
add_executable(OpenMP_Task08 OpenMP/task08.cpp)
add_executable(OpenMP_Task09 OpenMP/task09.cpp)
add_executable(OpenMP_Task10 OpenMP/task10.cpp)
add_executable(OpenMP_Task11 OpenMP/task11.cpp)
add_executable(OpenMP_Task13 OpenMP/task13.cpp)
add_executable(OpenMP_Task14 OpenMP/task14.cpp)
add_executable(OpenMP_Task15 OpenMP/task15.cpp)

find_package(MPI REQUIRED)

add_executable(MPI_Task_1_1 MPI/Task1_1.cpp)
target_link_libraries(MPI_Task_1_1 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_1_2 MPI/Task1_2.cpp)
target_link_libraries(MPI_Task_1_2 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_1_3 MPI/Task1_3.cpp)
target_link_libraries(MPI_Task_1_3 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_1_4 MPI/Task1_4.cpp)
target_link_libraries(MPI_Task_1_4 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_1_5 MPI/Task1_5.cpp)
target_link_libraries(MPI_Task_1_5 PUBLIC MPI::MPI_CXX)

add_executable(MPI_Task_2_1 MPI/Task2_1.cpp)
target_link_libraries(MPI_Task_2_1 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_2_2 MPI/Task2_2.cpp)
target_link_libraries(MPI_Task_2_2 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_2_3 MPI/Task2_3.cpp)
target_link_libraries(MPI_Task_2_3 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_2_4 MPI/Task2_4.cpp)
target_link_libraries(MPI_Task_2_4 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_2_5 MPI/Task2_5.cpp)
target_link_libraries(MPI_Task_2_5 PUBLIC MPI::MPI_CXX)

add_executable(MPI_Task_3_1 MPI/Task3_1.cpp)
target_link_libraries(MPI_Task_3_1 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_3_2 MPI/Task3_2.cpp)
target_link_libraries(MPI_Task_3_2 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_3_3 MPI/Task3_3.cpp)
target_link_libraries(MPI_Task_3_3 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_3_4 MPI/Task3_4.cpp)
target_link_libraries(MPI_Task_3_4 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_3_5 MPI/Task3_5.cpp)
target_link_libraries(MPI_Task_3_5 PUBLIC MPI::MPI_CXX)

add_executable(MPI_Task_4_1 MPI/Task4_1.cpp)
target_link_libraries(MPI_Task_4_1 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_4_2 MPI/Task4_2.cpp)
target_link_libraries(MPI_Task_4_2 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_4_3 MPI/Task4_3.cpp)
target_link_libraries(MPI_Task_4_3 PUBLIC MPI::MPI_CXX)

add_executable(MPI_Task_5_1 MPI/Task5_1.cpp)
target_link_libraries(MPI_Task_5_1 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_5_2 MPI/Task5_2.cpp)
target_link_libraries(MPI_Task_5_2 PUBLIC MPI::MPI_CXX)
add_executable(MPI_Task_5_3 MPI/Task5_3.cpp)
target_link_libraries(MPI_Task_5_3 PUBLIC MPI::MPI_CXX)
